clang/test/BSC/Negative/SafeZone/safe_arithmetic_conversion/bitfield_enum.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

enum Color { RED, GREEN, BLUE, YELLOW, PURPLE, ORANGE, WHITE, BLACK };
enum Wide { W0 = 0, W255 = 255, W256 = 256, W1023 = 1023, W1024 = 1024 };
enum Signed { NEG = -10, ZERO_S = 0, POS = 10 };
enum Flags { F0 = 0x1, F1 = 0x2, F2 = 0x4, F3 = 0x8, F4 = 0x10 };
enum Small { SA = 0, SB = 1, SC = 2, SD = 3 };

struct S {
  unsigned int color : 2;
  unsigned int flags : 3;
  signed int val : 4;
  unsigned int narrow : 1;
  unsigned short wide : 8;
  unsigned int x : 3;
  unsigned int y : 2;
  unsigned int z : 1;
  signed int w : 4;
};

// --- Assignment tests ---

// Enum constant exceeds unsigned bitfield width
_Safe void test_enum_constant_overflow_unsigned(void) {
  struct S s;
  // YELLOW=3 fits in 2-bit unsigned [0,3] — no error
  s.color = YELLOW;
  // PURPLE=4 does NOT fit in 2-bit unsigned
  s.color = PURPLE;  // expected-error {{implicit conversion from type 'int' to unsigned bit-field of width 2 is forbidden in the safe zone}} \
                     // expected-note {{value can be masked to fit, e.g. '(expr) & 0x3u'}}
  // BLACK=7 does NOT fit in 2-bit unsigned
  s.color = BLACK;   // expected-error {{implicit conversion from type 'int' to unsigned bit-field of width 2 is forbidden in the safe zone}} \
                     // expected-note {{value can be masked to fit, e.g. '(expr) & 0x3u'}}
  // GREEN=1 fits in 1-bit unsigned [0,1]
  s.narrow = GREEN;
  // BLUE=2 does NOT fit in 1-bit unsigned
  s.narrow = BLUE;   // expected-error {{implicit conversion from type 'int' to unsigned bit-field of width 1 is forbidden in the safe zone}} \
                     // expected-note {{value can be masked to fit, e.g. '(expr) & 0x1u'}}
}

// Enum constant exceeds signed bitfield width (range [-8,7] for 4-bit signed)
_Safe void test_enum_constant_overflow_signed(void) {
  struct S s;
  // POS=10 does NOT fit in 4-bit signed [-8,7]
  s.val = POS;  // expected-error {{implicit conversion from type 'int' to signed bit-field of width 4 is forbidden in the safe zone}}
  // NEG=-10 does NOT fit in 4-bit signed [-8,7]
  s.val = NEG;  // expected-error {{implicit conversion from type 'int' to signed bit-field of width 4 is forbidden in the safe zone}}
}

// Enum variable assigned to narrow bitfield — type is the enum type
_Safe void test_enum_variable_overflow(void) {
  struct S s;
  enum Color c = RED;
  s.color = c;   // expected-error {{implicit conversion from type 'enum Color' to unsigned bit-field of width 2 is forbidden in the safe zone}} \
                 // expected-note {{value can be masked to fit, e.g. '(expr) & 0x3u'}}
  s.narrow = c;  // expected-error {{implicit conversion from type 'enum Color' to unsigned bit-field of width 1 is forbidden in the safe zone}} \
                 // expected-note {{value can be masked to fit, e.g. '(expr) & 0x1u'}}

  enum Wide w = W0;
  s.flags = w;   // expected-error {{implicit conversion from type 'enum Wide' to unsigned bit-field of width 3 is forbidden in the safe zone}} \
                 // expected-note {{value can be masked to fit, e.g. '(expr) & 0x7u'}}
}

// Enum constant in initialization that overflows
_Safe void test_enum_init_overflow(void) {
  struct S s1 = { .color = PURPLE };  // expected-error {{implicit conversion from type 'int' to unsigned bit-field of width 2 is forbidden in the safe zone}} \
                                      // expected-note {{value can be masked to fit, e.g. '(expr) & 0x3u'}}
  struct S s2 = { .val = POS };       // expected-error {{implicit conversion from type 'int' to signed bit-field of width 4 is forbidden in the safe zone}}
}

// --- Bitwise operator tests ---

// Enum variable & mask too wide for target bitfield
_Safe void test_enum_and_too_wide(void) {
  struct S s;
  enum Flags f = F0;
  enum Small sm = SA;

  // f & 0xfu: mask width is 4, exceeds unsigned:3
  s.x = f & 0xfu;   // expected-error {{implicit conversion from type 'unsigned int' to unsigned bit-field of width 3 is forbidden in the safe zone}} \
                     // expected-note {{value can be masked to fit, e.g. '(expr) & 0x7u'}}
  // sm & 0x7u: mask width is 3, exceeds unsigned:2
  s.y = sm & 0x7u;  // expected-error {{implicit conversion from type 'unsigned int' to unsigned bit-field of width 2 is forbidden in the safe zone}} \
                     // expected-note {{value can be masked to fit, e.g. '(expr) & 0x3u'}}
}

// Enum variable | enum constant — result too wide
_Safe void test_enum_or_too_wide(void) {
  struct S s;
  enum Flags f = F0;
  enum Small sm = SA;

  // f | F1: both have values that can set bits beyond width 2
  s.y = f | F1;     // expected-error {{implicit conversion from type 'unsigned int' to unsigned bit-field of width 2 is forbidden in the safe zone}} \
                    // expected-note {{value can be masked to fit, e.g. '(expr) & 0x3u'}}
  // sm | sm: enum Small underlying is int (width 32), exceeds unsigned:2
  s.y = sm | sm;    // expected-error {{implicit conversion from type 'unsigned int' to unsigned bit-field of width 2 is forbidden in the safe zone}} \
                    // expected-note {{value can be masked to fit, e.g. '(expr) & 0x3u'}}
  // f | F3: result can be up to 0x9, exceeds signed:4 range
  s.w = f | F3;     // expected-error {{implicit conversion from type 'unsigned int' to signed bit-field of width 4 is forbidden in the safe zone}}
}

// Enum variable ^ enum constant — result too wide
_Safe void test_enum_xor_too_wide(void) {
  struct S s;
  enum Flags f = F0;

  // f ^ F0: both can set bits beyond width 1
  s.z = f ^ F0;     // expected-error {{implicit conversion from type 'unsigned int' to unsigned bit-field of width 1 is forbidden in the safe zone}} \
                    // expected-note {{value can be masked to fit, e.g. '(expr) & 0x1u'}}
  // f ^ F2: result can set bits beyond width 2
  s.y = f ^ F2;     // expected-error {{implicit conversion from type 'unsigned int' to unsigned bit-field of width 2 is forbidden in the safe zone}} \
                    // expected-note {{value can be masked to fit, e.g. '(expr) & 0x3u'}}
}

// Enum constant | enum constant — result is constant, evaluated at compile time
_Safe void test_enum_constant_or_too_wide(void) {
  struct S s;
  // F2|F3 = 0x4|0x8 = 0xC = 12, exceeds unsigned:3 [0,7]
  s.x = F2 | F3;    // expected-error {{implicit conversion from type 'int' to unsigned bit-field of width 3 is forbidden in the safe zone}} \
                    // expected-note {{value can be masked to fit, e.g. '(expr) & 0x7u'}}
  // F3|F4 = 0x8|0x10 = 0x18 = 24, exceeds unsigned:3
  s.x = F3 | F4;    // expected-error {{implicit conversion from type 'int' to unsigned bit-field of width 3 is forbidden in the safe zone}} \
                    // expected-note {{value can be masked to fit, e.g. '(expr) & 0x7u'}}
}

// Enum constant ^ enum constant — result too wide
_Safe void test_enum_constant_xor_too_wide(void) {
  struct S s;
  // F2^F3 = 0x4^0x8 = 0xC = 12, exceeds unsigned:3
  s.x = F2 ^ F3;    // expected-error {{implicit conversion from type 'int' to unsigned bit-field of width 3 is forbidden in the safe zone}} \
                    // expected-note {{value can be masked to fit, e.g. '(expr) & 0x7u'}}
}

// Enum constant & enum constant — result too wide for narrow target
_Safe void test_enum_constant_and_too_wide(void) {
  struct S s;
  // (F2|F3|F4) & 0xf = 0x1C & 0xf = 0xC = 12, exceeds unsigned:3
  s.x = (F2 | F3 | F4) & 0xf;  // expected-error {{implicit conversion from type 'int' to unsigned bit-field of width 3 is forbidden in the safe zone}} \
                               // expected-note {{value can be masked to fit, e.g. '(expr) & 0x7u'}}
}
